welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:48: error: not found: value fleur
					fleur(Color.blue)
                                        ^