welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def growFlowers(){

def marque(d:Color){
	setCouleurBrosse(d)
	baisseBrosse
	leveBrosse
}

def fleur(c:Color){
	marque(c)
	avance
	gauche
	avance
	marque(c)
	recule(2)
	marque(c)
	avance
	marque(Color.yellow)
	droite
	avance
	marque(c)
}

fleur(Color.red)
avance(2)
fleur(Color.cyan)
droite
avance(4)
droite
fleur(Color.green)
droite
avance(2)
gauche
fleur(Color.orange)
gauche
avance(2)
droite
fleur(Color.pink)
droite;droite;
	
}

for (x<-1 to 4){
	growFlowers
	x match{
		case 1|3 => {gauche;avance(2);droite;avance(6)
					fleur(Color.blue)
					avance(2);gauche;avance(3);droite}
		case 2 => {gauche;avance(2);droite;recule(9);
				droite;avance(5);gauche}
		case _ =>
		}
	}